--- a/website/package.json
+++ b/website/package.json
@@ -43,7 +43,8 @@
     "react-feather": "^2.0.3",
     "react-flip-toolkit": "^6.6.3",
     "react-helmet": "^5.2.1",
-    "rehype-react": "^3.1.0"
+    "rehype-react": "^3.1.0",
+    "tippy.js": "^6.2.1"
   },
   "keywords": [
     "gatsby"
